tests/errors/first_stage/operation/expected_comma/expected_comma.am
.data -1, 10
mov r1, data[1]
mov data[2] r2
